# urdfCParser

./: .gitignore  CMakeLists.txt  README.md  main.c
data/: test.urdf  urdf_data.json
src/: CMakeLists.txt  parser.c  parser.h
